--- a/Yudha_Prediksi_lulus_tepat_waktu.ipynb
+++ b/Yudha_Prediksi_lulus_tepat_waktu.ipynb
@@ -2494,7 +2494,7 @@
         "# Buat data baru untuk diprediksi\n",
         "new_data = pd.DataFrame({'ip1': [new_ip1], 'ip2': [new_ip2], 'ip3': [new_ip3], 'ip4': [new_ip4]})\n",
         "\n",
-        "# Lakukan prediksi menggunakan model DecisionTreeClassifier yang sudah dilatih sebelumnya\n",
+        "# Lakukan prediksi menggunakan model KNN yang sudah dilatih sebelumnya\n",
         "prediction = model1.predict(new_data)\n",
         "print(prediction)\n",
         "\n",
